# caffeine

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: caffeine.rb
src/: duration.rs  ipc.rs  lib.rs  main.rs  power.rs
src/application/: mod.rs  service.rs
src/domain/: mod.rs  models.rs  ports.rs
src/infrastructure/: battery.rs  config.rs  ipc.rs  jiggle.rs  login_item.rs  mod.rs  power.rs  update_checker.rs
tests/: jiggle_perf.rs
