[package]
name = "caffeine"
version = "0.2.2"
edition = "2024"
description = "Keep your Mac awake — CLI + live menu bar countdown"
license = "MIT"
repository = "https://github.com/juliocanizalez/caffeine"
keywords = ["macos", "sleep", "caffeinate", "menubar"]
categories = ["command-line-utilities"]

[lib]
name = "caffeine"
path = "src/lib.rs"

[[bin]]
name = "caffeine"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tray-icon = "0.24"
tao = "0.34"
muda = "0.19"
libc = "0.2"
resvg = "0.44"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
dirs = "5"
ureq = { version = "2", features = ["json"] }
open = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
